# legless-lizard

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  make_makefile_docs.py  messages.jsonc  pyproject.toml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
ll/: app.py  logger.py  sentry.py  settings.py
ll/api/: app.py  handlers.py  healthcheck.py  middlewares.py  schema.py  settings.py  ws.py
ll/api/game/: intersect.py  loop.py  player.py  resources.py  setup.py
ll/api/game/buffs/: __init__.py  effects.py  resources.py
ll/api/game/messages/: __init__.py  resources.py
ll/api/game/messages/handlers/: __init__.py  client.py
ll/api/handlers/: game.py
ll/api/messages/: resources.py  schema.py
ll/api/messages/handlers/: client.py
ll/game/: bot.py  intersect.py  loop.py  player.py  setup.py
ll/game/buffs/: __init__.py  effects.py
ll/game/resources/: buffs.py  consumables.py  game.py
ll/migrations/: env.py  script.py.mako
ll/storage/: db.py  settings.py
ll/tests/: conftest.py  db.py  test_dummy.py
scripts/: run_dev.sh  run_fmt.sh  run_libs_add.sh  run_libs_install.sh  run_libs_update.sh  run_lint.sh  run_migrate.sh  run_revision.sh  run_test.sh  run_web.sh  run_web_prod.sh  wait_for_postgres.py
