[build-system]
# poetry version should match Dockerfile
requires = ["poetry==1.2.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "ll"
version = "0.0.1"
description = "description"
authors = ["Sportsflare <Author@sportsflare.io>"]

[[tool.poetry.source]]
name = 'default'
url = 'https://pypi.python.org/simple'
default = true

[tool.poetry.dependencies]
python = "~3.10"

pydantic = "^2"
pydantic-settings = "^2"
sentry-sdk = "^1.9.8"
structlog = "~21.5.0"

# Dependencies for web server
aiohttp = "^3.8.6"
aiohttp-apispec = "3.0.0b2"
aiohttp-middlewares = "~2.1.0"
gunicorn = "~20.1.0"
marshmallow = "3.20.1"
marshmallow-enum = "~1.5.1"
asyncpg = "~0.27.0"
MarkupSafe = "~2.0.1"# Dependencies for database
alembic = "^1.9.4"
sqlalchemy = "^2.0.3"
# Psycopg2 required for alembic
psycopg2-binary = "~2.8.6"
marshmallow-oneofschema = "^3.0.1"


[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "~6.0.0"
flake8-docstrings = "~1.6.0"
Flake8-pyproject = "*"
isort = "~5.8.0"
pytest = "~7.2.1"
pytest-aiohttp = "~1.0.4"
pytest-asyncio = "~0.20.3"
pytest-cov = "~2.11.1"
sphinx = "~3.5.3"
sphinx-rtd-theme = "~0.5.2"
debugpy = "^1.6.0"

[tool.isort]
profile="black"

[tool.flake8]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D202",
    "D213",
    "E203",
    "W503",
]
exclude = ["migrations"]
max-line-length = 120
max-complecity = 10
